# clever-cloud-logs-cli

./: Cargo.toml  README.md
src/: config.rs  log.rs  main.rs
