[package]
name = "clever-cloud-logs"
version = "0.1.0"
authors = ["Rémi Bardon <remi.bardon.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Command Line Argument Parsing
clap = "2.33.3"

# File reading & JSON parsing
directories = "3.0.1"
serde_json = "1.0.58"

# OAuth 1
rand = "0.7.3"
oauth = { version = "0.3", package = "oauth1-request" }

# Server Sent Event
async-sse = "4.0.1"
