[package]
name = "clever-cloud-logs"
version = "0.1.0"
authors = ["Rémi Bardon <remi.bardon.dev@gmail.com>"]
edition = "2018"

[dependencies]
# Command Line Argument Parsing
clap = "2.33.3"

# File reading & JSON parsing
directories = "3.0.1"
serde_json = "1.0.58"

# OAuth 1
oauth1 = "1.0.0"
base64 = { version = "0.13.0" }

# HTTP Client
surf = "2.0.0"

# Server Sent Event
async-sse = "4.0.1"
async-std = { version = "1.6.5", features = ["attributes"] }
http-types = { version = "2.5.0" }
